<?xml version="1.0" encoding="utf-8"?>

<!--This project was created as a part of the Android Basics Nanodegree by Google Program-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scrollViewParent">

    <RelativeLayout
        style="@style/relativeParent"
        tools:context="com.example.android.footballscorekeeper.MainActivity">

        <LinearLayout
            android:id="@+id/linearlinear"
            style="@style/linearLayoutMain">

            <LinearLayout style="@style/linearLayoutsecond">

                <ImageView
                    android:id="@+id/barcalogo"
                    android:layout_width="@dimen/logowidth"
                    android:layout_height="@dimen/logoheight"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/marginbottomlogo"
                    android:paddingTop="@dimen/paddingtoplogo"
                    android:src="@drawable/barcalogo" />

                <TextView
                    android:id="@+id/team_a_name"
                    style="@style/textTeamName"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/teamnamea"
                    android:textColor="@color/teamNameColor"
                    android:textSize="@dimen/teamNameTextViews" />


                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/finalScoreGoal"
                    android:paddingBottom="@dimen/paddingbottom"
                    android:text="@string/scorefinala"
                    android:textColor="@color/scoreColor"
                    android:textSize="@dimen/scoreTextViews" />

                <TextView
                    android:id="@+id/team_a_fouls"
                    style="@style/fouls"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="@dimen/foulspaddingleft"
                    android:paddingRight="@dimen/foulspaddingright"
                    android:text="@string/foulsTeamA"
                    android:textSize="@dimen/foulsteamABtextsize" />

                <LinearLayout
                    style="@style/cardViesScore"
                    android:layout_margin="@dimen/cardViewMargin"
                    android:background="@color/colorPrimary">

                    <ImageView
                        style="@style/cardsIcons"
                        android:src="@drawable/yellocard" />

                    <TextView
                        android:id="@+id/team_a_yellow_cards"
                        style="@style/cardScore"
                        android:layout_marginLeft="@dimen/yellowcardsmarginleftA"
                        android:layout_marginRight="@dimen/yellowcardsmarginrightA"
                        android:text="@string/yellowcardteamA"
                        android:textSize="@dimen/textsizeyellowcards"
                        android:textStyle="bold" />

                    <ImageView
                        style="@style/cardsIcons"
                        android:layout_marginLeft="@dimen/redcardsmarginleft"
                        android:layout_marginRight="@dimen/redcardsmarginright"
                        android:src="@drawable/redcard" />

                    <TextView
                        android:id="@+id/team_a_red_cards"
                        style="@style/cardScore"
                        android:layout_marginRight="@dimen/redcardsmarginright"
                        android:text="@string/redcardteamA"
                        android:textSize="@dimen/textsizeredcards"
                        android:textStyle="bold" />
                </LinearLayout>


                <Button
                    android:id="@+id/goal_team_a"
                    style="@style/goalButton"
                    android:layout_marginLeft="@dimen/marginButtons1"
                    android:layout_marginRight="@dimen/marginButtons1"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="addOneForTeamA"
                    android:text="@string/button1score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsizegoalbutton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/foul_team_a"
                    style="@style/foulButton"
                    android:layout_marginLeft="@dimen/marginButtons1"
                    android:layout_marginRight="@dimen/marginButtons1"
                    android:layout_marginTop="@dimen/margenButtonstop"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="addOneFoulTeamA"
                    android:text="@string/button2score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsizefoulbutton"
                    android:textStyle="bold" />

                <LinearLayout style="@style/linearCardsButtons">

                    <Button
                        style="@style/yellowAndRedCardsButton"
                        android:layout_marginLeft="@dimen/marginButtons1"
                        android:layout_marginRight="@dimen/yellowcardmarginrightbutton"
                        android:layout_marginTop="@dimen/margenButtonstop"
                        android:background="@color/yellow"
                        android:fontFamily="sans-serif-medium"
                        android:onClick="addYellowForTeamA"
                        android:text="@string/yellowcardbutton"
                        android:textColor="@color/black"
                        android:textSize="@dimen/yellowcardbuttontextsize" />

                    <Button
                        style="@style/yellowAndRedCardsButton"
                        android:layout_marginLeft="@dimen/redcardmarginrightbutton"
                        android:layout_marginRight="@dimen/marginButtons1"
                        android:layout_marginTop="@dimen/margenButtonstop"
                        android:background="@color/red"
                        android:fontFamily="sans-serif-medium"
                        android:onClick="addRedForTeamA"
                        android:text="@string/redcardbutton"
                        android:textColor="@color/black"
                        android:textSize="@dimen/redcardbuttontextsize" />

                </LinearLayout>

            </LinearLayout>

            <View
                style="@style/viewLine"
                android:layout_marginTop="@dimen/viewLineMargin"
                android:background="@color/scoreColor" />

            <LinearLayout style="@style/linearLayoutsecond">

                <ImageView
                    android:id="@+id/reallogo"
                    android:layout_width="@dimen/logowidth"
                    android:layout_height="@dimen/logoheight"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/marginbottomlogo"
                    android:paddingTop="@dimen/paddingtoplogo"
                    android:src="@drawable/realmadrid" />

                <TextView
                    android:id="@+id/team_b_name"
                    style="@style/textTeamName"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/teamnameb"
                    android:textColor="@color/teamNameColor"
                    android:textSize="@dimen/teamNameTextViews" />


                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/finalScoreGoal"
                    android:paddingBottom="@dimen/paddingbottom"
                    android:text="@string/scorefinalb"
                    android:textColor="@color/scoreColor"
                    android:textSize="@dimen/scoreTextViews" />

                <TextView
                    android:id="@+id/team_b_fouls"
                    style="@style/fouls"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="@dimen/foulspaddingleft"
                    android:paddingRight="@dimen/foulspaddingright"
                    android:text="@string/foulsTeamB"
                    android:textSize="@dimen/foulsteamABtextsize" />

                <LinearLayout
                    style="@style/cardViesScore"
                    android:layout_margin="@dimen/cardViewMargin"
                    android:background="@color/colorPrimary">

                    <ImageView
                        style="@style/cardsIcons"
                        android:src="@drawable/yellocard" />

                    <TextView
                        android:id="@+id/team_b_yellow_cards"
                        style="@style/cardScore"
                        android:layout_marginLeft="@dimen/yellowcardsmarginleftA"
                        android:layout_marginRight="@dimen/yellowcardsmarginrightA"
                        android:text="@string/yellowcardteamB"
                        android:textSize="@dimen/textsizeyellowcards"
                        android:textStyle="bold" />

                    <ImageView
                        style="@style/cardsIcons"
                        android:layout_marginLeft="@dimen/redcardsmarginleft"
                        android:layout_marginRight="@dimen/redcardsmarginright"
                        android:src="@drawable/redcard" />

                    <TextView
                        android:id="@+id/team_b_red_cards"
                        style="@style/cardScore"
                        android:layout_marginRight="@dimen/redcardsmarginright"
                        android:text="@string/redcardteamB"
                        android:textSize="@dimen/textsizeredcards"
                        android:textStyle="bold" />

                </LinearLayout>


                <Button
                    android:id="@+id/goal_team_b"
                    style="@style/goalButton"
                    android:layout_marginLeft="@dimen/marginButtons1"
                    android:layout_marginRight="@dimen/marginButtons1"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="addOneForTeamB"
                    android:text="@string/button1score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsizegoalbutton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/foul_team_b"
                    style="@style/foulButton"
                    android:layout_marginLeft="@dimen/marginButtons1"
                    android:layout_marginRight="@dimen/marginButtons1"
                    android:layout_marginTop="@dimen/margenButtonstop"
                    android:fontFamily="sans-serif-medium"
                    android:onClick="addOneFoulTeamB"
                    android:text="@string/button2score"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsizefoulbutton"
                    android:textStyle="bold" />

                <LinearLayout style="@style/linearCardsButtons">

                    <Button
                        style="@style/yellowAndRedCardsButton"
                        android:layout_marginLeft="@dimen/marginButtons1"
                        android:layout_marginRight="@dimen/yellowcardmarginrightbutton"
                        android:layout_marginTop="@dimen/margenButtonstop"
                        android:background="@color/yellow"
                        android:fontFamily="sans-serif-medium"
                        android:onClick="addYellowForTeamB"
                        android:text="@string/yellowcardbutton"
                        android:textColor="@color/black"
                        android:textSize="@dimen/yellowcardbuttontextsize" />

                    <Button
                        style="@style/yellowAndRedCardsButton"
                        android:layout_marginLeft="@dimen/redcardmarginrightbutton"
                        android:layout_marginRight="@dimen/marginButtons1"
                        android:layout_marginTop="@dimen/margenButtonstop"
                        android:background="@color/red"
                        android:fontFamily="sans-serif-medium"
                        android:onClick="addRedForTeamB"
                        android:text="@string/redcardbutton"
                        android:textColor="@color/black"
                        android:textSize="@dimen/redcardbuttontextsize" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/resetbutton"
            style="@style/resetButton"
            android:layout_below="@id/linearlinear"
            android:layout_marginTop="@dimen/resetButtonMargin"
            android:onClick="resetbutton"
            android:text="@string/resetbutton" />

    </RelativeLayout>


</ScrollView>